--- a/asserts/css/style.css
+++ b/asserts/css/style.css
@@ -1,14 +1,74 @@
+body {
+    margin: 50px;
+    padding: 10px;
+}
 .grid-container {
     display: grid;
-    grid-template-columns: auto auto auto;
-    background-color: #000000;
+    grid-template-columns: auto auto auto auto;
+    background-color: black;
     padding: 10px;
-    gap: 6px;
+    gap: 30px;
 }
-.grid-item {
+.grid-item-1 {
+    grid-column-start: 1;
+    grid-column-end: 5;
+}
+.grid-container > div {
     background-color: rgba(255, 255, 255, 0.8);
-    border: 1px solid rgba(0, 0, 0, 0.8);
-    padding: 20px;
-    font-size: 30px;
     text-align: center;
+    padding: 20px 0;
+    font-size: 30px;
+}
+.grid-item-1 ul {
+    overflow: auto;
+}
+.grid-item-1 li {
+    float: left;
+    list-style-type: none;
+    padding: 10px;
+    font-size: 30px;
+}
+.grid-item-1 ul li a {
+    font-weight: bold;
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    padding-right: 40px;
+    font-size: 65px;
+}
+.books {
+    grid-row: 2/4;
+    grid-column: 3/5;
+}
+.kerry {
+    grid-column: 1/3;
+    grid-row: 3/7;
+}
+.kerry img {
+    width: 1000px;
+    height: 770px;
+}
+.icons {
+    grid-column: 4/5;
+}
+.icons img {
+    border: 10px solid black;
+}
+.shop {
+    grid-column: 4/5;
+}
+.item8 {
+    grid-column: 1/3;
+}
+.item9 {
+    grid-column: 3/5;
+}
+.syn {
+    grid-row: 4/7;
+}
+* h2 {
+    font-size: 60px;
+    font-weight: bold;
+}
+* a {
+    color: black;
 }
